// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test generateMockserverConfig() Add config to bare minimum project 1`] = `
"# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"2.5\\"
metadata:
  name: bare-minimum
type: application
server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: ''
            metadataPath: ./webapp/localService/metadata.xml
            mockdataPath: ./webapp/localService/data
            generateMockData: true
        annotations: []
"
`;

exports[`Test generateMockserverConfig() Add config to project with existing ui5-mock.yaml 1`] = `
"metadata:
  name: 'app'
type: application
server:
  customMiddleware:
    - name: middleware-before
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: /some/previous/service/uri
            metadataXmlPath: ./webapp/localService/metadata.xml
            mockdataRootPath: ./webapp/localService/data
            generateMockData: true
          - urlPath: /path/to/odata/service
            metadataPath: ./webapp/localService/metadata.xml
            mockdataPath: ./webapp/localService/data
            generateMockData: true
        annotations: []
"
`;
